--- a/keil/Objects/TIMEREXAMPLE.htm
+++ b/keil/Objects/TIMEREXAMPLE.htm
@@ -3,9 +3,9 @@
 <title>Static Call Graph - [.\Objects\TIMEREXAMPLE.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\TIMEREXAMPLE.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6210000: Last Updated: Thu Aug  1 19:14:37 2024
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6210000: Last Updated: Thu Aug  1 20:20:31 2024
 <BR><P>
-<H3>Maximum Stack Usage =        216 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =        232 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
 __rt_entry_main &rArr; main &rArr; SYSCFG_DL_init &rArr; SYSCFG_DL_PWM_0_init &rArr; DL_Timer_initPWMMode &rArr; DL_Timer_setCaptureCompareInput &rArr; DL_Common_updateReg
 <P>
@@ -155,7 +155,7 @@ Global Symbols
 <P><STRONG><a name="[75]"></a>__rt_entry_postsh_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$00000009))
 
 <P><STRONG><a name="[1b]"></a>__rt_entry_main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$0000000D))
-<BR><BR>[Stack]<UL><LI>Max Depth = 216 + Unknown Stack Size
+<BR><BR>[Stack]<UL><LI>Max Depth = 232 + Unknown Stack Size
 <LI>Call Chain = __rt_entry_main &rArr; main &rArr; SYSCFG_DL_init &rArr; SYSCFG_DL_PWM_0_init &rArr; DL_Timer_initPWMMode &rArr; DL_Timer_setCaptureCompareInput &rArr; DL_Common_updateReg
 </UL>
 <BR>[Calls]<UL><LI><a href="#[1c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
@@ -310,6 +310,7 @@ Global Symbols
 <BR><BR>[Stack]<UL><LI>Max Depth = 4<LI>Call Chain = DL_Common_delayCycles
 </UL>
 <BR>[Called By]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SYSCFG_DL_initPower
+<LI><a href="#[1c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[7f]"></a>__semihosting_library_function</STRONG> (Thumb, 0 bytes, Stack size 4 bytes, indicate_semi.o(.text), UNUSED)
@@ -456,13 +457,13 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[46]"></a>SYSCFG_DL_initPower</STRONG> (Thumb, 56 bytes, Stack size 24 bytes, ti_msp_dl_config.o(.text.SYSCFG_DL_initPower))
-<BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = SYSCFG_DL_initPower &rArr; DL_Common_delayCycles
+<BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = SYSCFG_DL_initPower &rArr; DL_Timer_enablePower
 </UL>
-<BR>[Calls]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_Common_delayCycles
-<LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_Timer_enablePower
+<BR>[Calls]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_Timer_enablePower
 <LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_GPIO_enablePower
 <LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_Timer_reset
 <LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_GPIO_reset
+<LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_Common_delayCycles
 </UL>
 <BR>[Called By]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SYSCFG_DL_init
 </UL>
@@ -475,10 +476,11 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;scan
 </UL>
 
-<P><STRONG><a name="[1c]"></a>main</STRONG> (Thumb, 660 bytes, Stack size 88 bytes, main.o(.text.main))
-<BR><BR>[Stack]<UL><LI>Max Depth = 216<LI>Call Chain = main &rArr; SYSCFG_DL_init &rArr; SYSCFG_DL_PWM_0_init &rArr; DL_Timer_initPWMMode &rArr; DL_Timer_setCaptureCompareInput &rArr; DL_Common_updateReg
+<P><STRONG><a name="[1c]"></a>main</STRONG> (Thumb, 824 bytes, Stack size 104 bytes, main.o(.text.main))
+<BR><BR>[Stack]<UL><LI>Max Depth = 232<LI>Call Chain = main &rArr; SYSCFG_DL_init &rArr; SYSCFG_DL_PWM_0_init &rArr; DL_Timer_initPWMMode &rArr; DL_Timer_setCaptureCompareInput &rArr; DL_Common_updateReg
 </UL>
-<BR>[Calls]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;scan
+<BR>[Calls]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_Common_delayCycles
+<LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;scan
 <LI><a href="#[32]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_Timer_setCaptureCompareValue
 <LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SYSCFG_DL_init
 <LI><a href="#[52]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;DL_GPIO_clearPins
